# NukaVisionFO4

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
Cheat Tables/: Fallout4.CT
cmake/: sourcelist.cmake
include/: ImGuiElement.h  ImGuiManager.h  ImGuiRenderer.h  PCH.h  UI.h  Window.h  WindowsMessageMap.h  hooks.h
include/widgets/: CharacterLighting.h  Widget.h
src/: ImGuiElement.cpp  ImGuiManager.cpp  ImGuiRenderer.cpp  UI.cpp  Window.cpp  WindowsMessageMap.cpp  hooks.cpp  main.cpp
src/widgets/: CharacterLighting.cpp
